# renderimage

./: .gitignore  CMakeLists.txt  README.md  RenderImage.kdev4
gendata/: .kateproject  .rustfmt.toml  CMakeLists.txt  Cargo.toml  build.rs
gendata/examples/: example1.rs  example2.rs
gendata/src/: generator.rs  lib.rs  misc.rs
gendata/src/geom/: mod.rs  point.rs  poly.rs  rect.rs  vector.rs
res/: icons.qrc
src/: datagenerator.cpp  datagenerator.h  main.cpp  renderimage.cpp  renderimage.h  renderimage.ui  workerthread.cpp  workerthread.h
src/utils/: container.hpp  exception.hpp
